# personal-agent-os

./: .gitignore  README.md  TODO.md  progress-log.md  pyproject.toml
app/agents/: base_agent.py
app/agents/scheduling/: schedule_agent.py
app/tools/: calendar.py
doc/: DESIGN_NORTH_STAR.md  FOUNDATION.md  REQUIREMENTS_SCHEDULE_AGENT.md  VISIONS.md  design_philosophy.md
doc/requirements/: schedule_agent.md
notes/: energy-loop.md
